--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pytest==7.1.3
-selene>=2.0.0b5
 requests~=2.28.1
-python-dotenv~=0.20.0
-voluptuous~=0.13.1
 allure-pytest==2.10.0
-curlify
+selene>=2.0.0b5
+python-dotenv>=0.21.0
+voluptuous~=0.13.1
+pytest_voluptuous>= 1.2.0
+curlify>=2.2.1
